# pq-conceal

./: README.md
docs/: REMAINING-WORK.html  STATUS.html  decisions-for-the-team.html  deposit-freeze-impl.html  deposit-term-policy-decision.html  deposits-mldsa-impl.html  deposits-mldsa.html  gao-bench-notes.html  hardening-notes.html  index.html  matrict-integration-plan.html  measured-numbers.html  messages-mlkem-impl.html  messages-mlkem.html  poc-vs-mainnet-report.html  pow-grover-widening.html  pq-deposit-wallet-blueprint.html  pq-ringsig-verdict.html  pq-scheme-landscape.html  raptor-integration-plan.html  ringsig-hardening.html  rpc-get-pq-outputs.html  serialization-format-spec.html  strategy-SUMMARY.html  strategy-crypto-modernization.html  strategy-decision.html  strategy-greenfield-design.html  strategy-rust-port.html  wallet-address-v2.html  wallet-pq-transfers.html  wallet-v2-impl.html
integration/conceal-core/: CryptoNoteConfig.h  README.md  raptor-integration.patch
integration/conceal-core/ccx-pqc/: Cargo.toml  build.rs
integration/conceal-core/ccx-pqc/csrc/: raptor_falcon.c
integration/conceal-core/ccx-pqc/src/: detkeygen.rs  falcon_ffi.rs  lib.rs  raptor.rs  raptor_abi.rs  ringsig.rs  walletcrypto.rs
poc/raptor/: CODEX-ASSESS.md  Cargo.toml  FIX-PROGRESS.md  FPEMU-PROGRESS.md  LICENSE  PROGRESS.md  README.md  REPORT.md  VET-SUMMARY.md  build.rs
poc/raptor/csrc/: abi_test.c
poc/raptor/src/: abi.rs  lib.rs
source/: REMAINING-WORK.md  STATUS.md  build-site.py  decisions-for-the-team.md  deposit-freeze-impl.md  deposit-term-policy-decision.md  deposits-mldsa-impl.md  deposits-mldsa.md  gao-bench-notes.md  hardening-notes.md  matrict-integration-plan.md  measured-numbers.md  messages-mlkem-impl.md  messages-mlkem.md  poc-vs-mainnet-report.md  pow-grover-widening.md  pq-deposit-wallet-blueprint.md  pq-ringsig-verdict.md  pq-scheme-landscape.md  raptor-integration-plan.md  ringsig-hardening.md  rpc-get-pq-outputs.md  serialization-format-spec.md  strategy-SUMMARY.md  strategy-crypto-modernization.md  strategy-decision.md  strategy-greenfield-design.md  strategy-rust-port.md  wallet-address-v2.md  wallet-pq-transfers.md  wallet-v2-impl.md
